--- a/config/params.yaml
+++ b/config/params.yaml
@@ -5,8 +5,8 @@
       io_method: "mmap"
       frame_id: "camera"
       pixel_format: "mjpeg2rgb"  # see usb_cam/supported_formats for list of supported formats
-      image_width: 640
-      image_height: 480
+      image_width: 1280
+      image_height: 720
       camera_name: "test_camera"
       camera_info_url: "package://usb_cam/config/camera_info.yaml"
       brightness: -1
@@ -20,3 +20,6 @@
       exposure: 100
       autofocus: false
       focus: -1
+      do_scale: true
+      scale_width: 640
+      scale_height: 360
